--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="body">
 				<div>
 					<h1>OUR MISSION</h1>
-					<p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text.</p>
+					<p>Welcome to space lovers community!</p>
 				</div>
 			</div>
 			<div class="footer">
@@ -106,7 +106,7 @@
 				<div>
 					<h1>FOLLOW OUR  MISSIONS ON</h1>
 					<div>
-						<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
+						<a href="https://www.facebook.com/Secret-recipes-102577071950889" class="facebook">facebook</a>
 						<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
 						<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
 						<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
@@ -115,7 +115,7 @@
 			</div>
 			<div class="footnote">
 				<div>
-					<p>&copy; 2023 BY SPACE PROSPECTION | ALL RIGHTS RESERVED</p>
+					<p>&copy; 2023 BY SECRET RECIPES | ALL RIGHTS RESERVED</p>
 				</div>
 			</div>
 		</div>
